[package]
name = "connection_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "connection_pool"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
tiberius = { version = "0.11", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
serde_json = "1.0"
async-trait = "0.1"
